# s2u-concat

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
cmake/: sourcesdk.cmake
cmake/platform/: linux.cmake  macos.cmake  shared.cmake  windows.cmake
include/: concat.hpp
include/concat/: traits.hpp
src/: concat.cpp
src/concat/: globals.cpp
